--- a/package.json
+++ b/package.json
@@ -18,7 +18,19 @@
     "method-override": "~2.0.2",
     "mongoose": "~3.8.0",
     "passport": "^0.3.2",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "angular": "^1.5.9",
+    "angular-mocks": "^1.5.9",
+    "angular-ui-router": "^0.3.2",
+    "gulp-livereload": "^3.8.1",
+    "gulp-nodemon": "^2.2.1",
+    "gulp-notify": "^2.2.0",
+    "jasmine-core": "^2.5.2",
+    "karma": "^1.3.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-jasmine": "^1.0.2",
+    "karma-requirejs": "^1.1.0",
+    "requirejs": "^2.3.2"
   },
   "devDependencies": {
     "angular": "^1.5.9",
